# numerical-methods-library

./: .gitignore  CMakeLists.txt  NumericalLibrary.cpp  NumericalLibrary.sln  NumericalLibrary.vcxproj  NumericalLibrary.vcxproj.filters  README.md  biblioteka_numeryczna.h  eliminacja_gaussa.cpp  inne_metody.cpp  interpolacja_lagrangea.cpp  metoda_bisekcji.cpp  metoda_najmniejszych_kwadratow.cpp  przyklad_bisekcji.cpp  przyklad_interpolacja_lagrangea.cpp  przyklad_miejsca_zerowe.cpp  regula_trapezow.cpp  test_bisekcji.cpp  test_eliminacji_gaussa.cpp  test_metody_eulera.cpp  test_najmniejszych_kwadratow.cpp  test_reguly_trapezow.cpp  testy_interpolacji_lagrangea.cpp  wszystkie_testy.cpp
examples/: przyklad_bisekcji.cpp
src/: metoda_bisekcji.cpp  metoda_eulera.cpp
tests/: test_bisekcji.cpp  test_eliminacji_gaussa.cpp  test_metody_eulera.cpp  test_najmniejszych_kwadratow.cpp  test_reguly_trapezow.cpp  wszystkie_testy.cpp
